# njalla-webhook

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
.beads/: issues.jsonl
.github/workflows/: ci.yml
examples/kubernetes/: complete-deployment.yaml  test-ingress.yaml
src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs
src/njalla/: client.rs  mod.rs  types.rs
src/webhook/: handlers.rs  mod.rs  routes.rs  types.rs
