[package]
name = "njalla-webhook"
version = "0.1.0"
edition = "2021"
authors = ["Njalla Webhook Contributors"]
description = "Njalla DNS webhook provider for external-dns"
license = "MIT"
repository = "https://github.com/yourusername/njalla-webhook"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for Njalla API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = { version = "0.14", features = ["toml"] }
dotenvy = "0.15"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
once_cell = "1.19"

[dev-dependencies]
mockito = "1.5"
wiremock = "0.6"
pretty_assertions = "1.4"
test-log = "0.2"
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[profile.dev]
debug = true